--- a/vpet/test/fixtures/pets.yml
+++ b/vpet/test/fixtures/pets.yml
@@ -10,7 +10,8 @@ one:
   asleep: false
   strength: 1
   defense: 1
-  age: 2016-07-01 03:50:03
+  age: 2016-07-01 04:13:06
+  user_id: 
   highscore_id: 
 
 two:
@@ -23,5 +24,6 @@ two:
   asleep: false
   strength: 1
   defense: 1
-  age: 2016-07-01 03:50:03
+  age: 2016-07-01 04:13:06
+  user_id: 
   highscore_id: 
