--- a/vpet/test/fixtures/inventories.yml
+++ b/vpet/test/fixtures/inventories.yml
@@ -4,12 +4,12 @@ one:
   item_name: MyString
   item_effect: 1
   item_des: MyString
-  game_prize: 1
+  money: 1
   user_id: 
 
 two:
   item_name: MyString
   item_effect: 1
   item_des: MyString
-  game_prize: 1
+  money: 1
   user_id: 
